# jira-notifier

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/agents/: fe-architect.md  fe-component.md  fe-implementer.md  fe-performance.md  fe-refactor-lead.md  jn-be-dev.md  jn-explorer.md  jn-fe-dev.md  jn-qa.md
.claude/skills/fe-refactor/: skill.md
.claude/skills/fe-refactor-audit/: skill.md
.claude/skills/jn-backend/: skill.md
.claude/skills/jn-build-run/: skill.md
.claude/skills/jn-frontend/: skill.md
.claude/skills/jn-maintain/: skill.md
.claude/skills/jn-qa-verify/: skill.md
.github/workflows/: release.yml
_workspace/: 03_lead_refactor_plan.md
jira-notifier/: README.md  build.bat  build.ps1  package.json  run-dev.bat  run-dev.ps1  setup.bat  setup.ps1
jira-notifier/src/: App.tsx
jira-notifier/src-tauri/src/: jira.rs  lib.rs  main.rs
jira-notifier/src/components/: NotificationList.tsx  Settings.tsx  TicketList.tsx
jira-notifier/src/hooks/: useConfig.ts  useJira.ts  useNotifications.ts  usePolling.ts  useTauriEvent.ts  useTickets.ts  useToast.ts
jira-notifier/src/styles/: global.css
src/: App.tsx  api.ts  main.tsx  queryClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/context/: JiraProvider.tsx  contexts.ts
src/hooks/: useConfig.ts  useJira.ts  useNotifications.ts  usePolling.ts  useTheme.ts  useTickets.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: time.ts  url.ts
(+33 files in other folders)
